1998-10-10  Dariush Eslimi  <eslimi@loran.com>

	* g++.old-deja/g++.ext/typeof1.C: New test; typeof based on
	template-dependent type

1998-10-10  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* g++.old-deja/g++.brendan/parse3.C: XFAILs, not ERRORs
	* g++.old-deja/g++.brendan/parse5.C: XFAILs, not ERRORs
	* g++.old-deja/g++.brendan/parse6.C: XFAILs, not ERRORs

	* g++.old-deja/g++.other/using5.C: New test; using decl from base
 	class should be usable as argument of member function
	* g++.old-deja/g++.other/using6.C: New test; using decl from base
 	class should be usable as return type of member function
	* g++.old-deja/g++.other/using7.C: New test; using decl from base
 	class should be usable as type of data member

	* g++.old-deja/g++.ns/extern1.C: fix XFAIL mark

Fri Oct  9 19:19:19 1998  Jeffrey A Law  (law@cygnus.com)

	* gcc.c-torture/special/920521-1.c: Fix bogus test.

Thu Oct  8 19:14:05 1998  Nick Clifton  <nickc@cygnus.com>

	* gcc.dg/dll-?.c Add thumb to target list.
	Fix assembler scan patterns to match current assembler output.

1998-10-08  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* g++.old-deja/g++.pt/expr6.C: New test.  operator?: breaks
	matching of template brackets.

	* g++.old-deja/g++.other/using4.C: New test.  Test using
 	declarations of methods from base classes.

	* g++.old-deja/g++.ns/extern1.C: New test.  Extern declarations
 	within functions should introduce names into the innermost
 	enclosing namespace

	* g++.old-deja/g++.other/init7.C: New test.  Retry initialization
 	of static locals if first initialization throws

Wed Oct  7 12:00:20 1998  Jim Wilson  <wilson@cygnus.com>

	* gcc.c-torture/compile/981007-1.c: New test for irix6 -O0 core dump.

1998-10-06  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* g++.old-deja/g++.pt/friend35.C: New test.  A template function
 	must be declared before its specializations can be named in friend
 	declarations.

1998-10-05  Dave Love  <d.love@dl.ac.uk>
